--- a/index.html
+++ b/index.html
@@ -3,18 +3,71 @@
         <title>Welcome to Cima</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles/default-layout.css">
+        <link rel="stylesheet" href="styles/grid-layout.css">
     </head>
     <body>
-
-
-
-
+        <div class="row parallax-river-walk">
+        </div>
         <!--Reporting Options-->
-        <div class="row">
-            <div class="column-3">
-                
+        <div class="row darkgrey">
+            <div class="column single short section-header">
+                <h1>Begin reporting</h1>
+                <a href="#">Click here to view the participating cities</a>
             </div>
         </div>
+        <div class="row darkgrey">
+            <div class="column third tall step">
+                <h1>1</h1>
+                <h2>IOS</h2>
+                <a href="#"><img src="../media/app-store-button.png"></img></a>
+                <p>The Cima app is available at the Google Play Store and the App Store.</p>
+            </div>
+            <div class="column third tall step">
+                <h1>2</h1>
+                <h2>Android</h2>
+                <a href="#"><img src="../media/google-play-button.png"></img></a>
+                <p>The Cima app is available at the Google Play Store and the App Store.</p>
+            </div>
+            <div class="column third tall step">
+                <h1>3</h1>
+                <h2>Browser</h2>
+                <p></p>
+            </div>
+        </div>
+
+        <div class="row parallax-pothole hide-on-mobile"></div>
+
+        <!--Municipality Ad-->
+        <div class="row">
+            <div class="column half hide-on-mobile">
+                <h1>image goes here</h1>
+            </div>
+            <div class="column half">
+                <div class="row darkblue">
+                    <div class="column sub-header">
+                        <h1>Crowdsourced documentation of your city's infrastructure.</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="column single">
+                        <p>Along with providing crowdsourcing applications, Cima comes ready with all you need to create a complete picture of you city's infrastructure; it includes detailed mapping of active safety hazards, a timeline of damages to any object, analytical tools, and more. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!--Footer (from scripts/components/)-->
+        <script language="javascript" type="text/javascript" src="./scripts/components/footer.js"></script>
+
+
+
+
+
+
+
+
+
+        
     </body>
 </html>
