tried adding navbar but having css problems

--- a/faq.html
+++ b/faq.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="column single short basic-textbox">
+            <div class="column single basic-textbox">
                 <p>Cima--an acronym for Crowdsourcing Infrastructure Management Application--aims to enable small communities and asset managers with a similar quality of data which would be derived from a large workforce. Data collection and condition assessment empower budgeters with the ability to preemptively forecast and plan for improvements, promoting proactive instead of reactive measures. The data collected is by the people, for the people, and allows all voices to be recognized for the betterment of their own community.</p>
             </div>
         </div>
