last commit failed, so same

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet"> 
         
-        <link rel="stylesheet" href="styles/navbar.css">
-        <link rel="stylesheet" href="styles/grid-layout.css">
+        <link rel="stylesheet" href="./default-styles/navbar.css">
+        <link rel="stylesheet" href="./default-styles/grid-layout.css">
+        <link rel="stylesheet" href="./default-styles/home.css">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     </head>
     <body>
         
@@ -19,13 +19,13 @@
         <div class="row parallax-river-walk">
         </div>
         <!--Reporting Options-->
-        <div class="row darkgrey">
+        <div class="row green">
             <div class="column single short section-header">
                 <h1>Begin reporting</h1>
                 <a href="#">Click here to view the participating cities</a>
             </div>
         </div>
-        <div class="row darkgrey">
+        <div class="row green">
             <div class="column third">
                 <a href="#"><img src="../media/app-store-button.png"></img></a>
             </div>
