--- a/info/questions/faq.html
+++ b/info/questions/faq.html
@@ -3,9 +3,15 @@
         <title>Welcome to Cima</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles/grid-layout.css">
+        
+        <link rel="stylesheet" href="../styles/navbar.css">
+        <link rel="stylesheet" href="../styles/grid-layout.css">
     </head>
     <body>
+
+        
+        <script language="javascript" type="text/javascript" src="../scripts/components/navbar.js"></script>
+
         <!--main header-->
         <div class="row darkblue">
             <div class="column single short section-header">
@@ -26,6 +32,6 @@
         </div>
 
         <!--Footer (from scripts/components)-->
-        <script language="javascript" type="text/javascript" src="./scripts/components/footer.js"></script>
+        <script language="javascript" type="text/javascript" src="../scripts/components/footer.js"></script>
     </body>
 </html>
