--- a/html-template.html
+++ b/html-template.html
@@ -5,10 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet"> 
         
-        <link rel="stylesheet" href="./default-styles/navbar.css">
-        <link rel="stylesheet" href="./default-styles/grid-layout.css">
+        <link rel="stylesheet" href="../page-defaults/navbar.css">
+        <link rel="stylesheet" href="../page-defaults/grid-layout.css">
 
     </head>
     <body>
+        <script language="javascript" type="text/javascript" src="../page-defaults/navbar.js"></script>
+        <script language="javascript" type="text/javascript" src="../page-defaults/footer.js"></script>
     </body>
 </html>
