contat page and new home css

--- a/html-template.html
+++ b/html-template.html
@@ -1,12 +1,14 @@
 <html>
     <head>
-        <title></title>
+        <title>Welcome to Cima</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet"> 
-        
-        <link rel="stylesheet" href="../page-defaults/navbar.css">
-        <link rel="stylesheet" href="../page-defaults/grid-layout.css">
+        <script src="https://kit.fontawesome.com/d81ae76bde.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./page-defaults/navbar.css">
+        <link rel="stylesheet" href="./page-defaults/footer.css">
+        <link rel="stylesheet" href="./home.css">
 
     </head>
     <body>
