update before push to live server

--- a/index.html
+++ b/index.html
@@ -85,10 +85,7 @@
                 </div>
             </div>
             <div class="container alt">
-                <div class="card narrow">
-                    <div class="textbox">
-                       
-                    </div>
+                <div class="card narrow" id="description-card">
                 </div>
                 <div class="card wide">
                     <div class="textbox">
