--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Meet the Team</title>
+        <title>Contact Us</title>
         <link rel="icon" href="../page-defaults/favicon.ico">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
